Tidy footer html

--- a/views/partials/footer.tmpl
+++ b/views/partials/footer.tmpl
@@ -1,10 +1,12 @@
 {{define "footer"}}
   <footer class="container-fluid">
     <div class="row align-items-center">
-      <div class="col"><a href="https://www.york.ac.uk/about/legal-statements/">Disclaimer</a> | <a href="/myradio/">MyRadio</a></div>
-        <div class="col">
-          <p class="m-0 text-right">Copyright © 1967-2017 University Radio York. Designed by the <a href="mailto:webmaster@ury.org.uk" title="Click to email the Computing team.">URY Computing Team</a></p>
-        </div>
+      <div class="col">
+        <a href="https://www.york.ac.uk/about/legal-statements/">Disclaimer</a> | <a href="/myradio/">MyRadio</a>
+      </div>
+      <div class="col">
+        <p class="m-0 text-right">Copyright © 1967-2017 University Radio York. Designed by the <a href="mailto:webmaster@ury.org.uk" title="Click to email the Computing team.">URY Computing Team</a></p>
+      </div>
     </div>
   </footer>
 {{end}}
