add open graph and page titles (#44)
* Added General OG To base.tmpl

I have created a general image to be used whenever a more specific one
isn’t provided (such as show image).
Created general og meta tags, and added twitter card.

* Removed Comment

I understand the type tag more now.

* Created OG Tags For people.tmpl

I have created the idea behind the OG tags, need to check syntax and
answer the comments.

* Created OG Tags for getinvolved.tmpl

Created an image to be associated with the get involved page, I have
also added tags. There are some comments on this page that need
addressing.

* Updated Naming Convention For Images

For open graph images, I am using naming convention:
open_graph-page_title

* Created OG Tags for show.tmpl

I have added OG Tags for show.tmpl.
There are comments that need resolved.

* Tags contained with open-graph block on people.tmpl

Now implemented tags within the open-graph block. Still contains some
TODOs

* General Tidy of open-graph block

Re-ordered meta tags.
Added todo, getting URL for page.

* Implements open-graph block on get involved.tmpl

Moved the tags to inside the open-graph block.

* Implements open-graph block in show.tmpl

I have added the meta tags into the open-graph block of show.tmpl.

There is still a couple of TODOs.
- Remove HTML from show descriptions.
- Get URL for page.

* Fixed URL Tag on show.tmpl

Fixed the URL Tag to use the correct URL for type of page.

* Fixed URL Tag on getinvolved.tmpl

Fixed the URL Tag to use the correct URL for type of page.

* Updated OG Tags in people.tmpl

- Changed the URL to be the url of the person.
- Updated Username so the tag should work (with pr #43).
- Title now uses {{.longName}} instead of University Radio York.
- Now uses attributes first_name, last_name

* Title now uses {{.longName}} in people.tmpl

Title now uses {{.longName}} in people.tmpl

* Replaced `University Radio York` in titles 

--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -1,3 +1,22 @@
+{{define "title"}}{{.PageContext.ShortName}} | {{with .PageData}}{{.User.Fname}} {{.User.Sname}}{{end}} Profile{{end}}
+
+{{define "open-graph"}}
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@{{.PageContext.MainTwitter}}">
+<meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}">
+<meta property="og:locale" content="en_GB">
+<meta property="og:title" content="{{.PageContext.ShortName}} | {{.PageData.User.Fname}} {{.PageData.User.Sname}} Profile">
+<meta property="og:url" content="{{.PageContext.FullURL}}{{url "/people/"}}{{.PageData.User.MemberID}}">     
+<!-- @TODO: Remove html so it is just plain text. -->
+<!-- @TODO: Check if the user has a bio, if not use general bio -->
+<meta property="og:description" content="{{.PageData.User.Bio}}">
+<meta property="og:image" content="{{.PageContext.FullURL}}{{url .PageData.User.Photo}}">
+<meta property="og:type" content="profile"> 
+<meta property="profile:username" content="{{.PageData.User.MemberID}}"> 
+<meta property="profile:first_name" content="{{.PageData.User.Fname}}">
+<meta property="profile:last_name" content="{{.PageData.User.Sname}}">
+  {{end}}
+
 {{define "content"}}
 
   {{with .PageData}}
