--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -5,19 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>{{block "title" .}}University Radio York{{end}}</title>   
+    <link rel="apple-touch-icon" sizes="180x180" href="{{url "/apple-touch-icon.png"}}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{url "/favicon-32x32.png"}}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{url "/favicon-16x16.png"}}">
+    <link rel="manifest" href="{{url "/manifest.json"}}">
+    <link rel="mask-icon" href="{{url "/safari-pinned-tab.svg"}}" color="#003367">
+    <meta name="theme-color" content="#003367">
+    
+    <title>{{block "title" .}}{{.PageContext.LongName}}{{end}}</title>   
 
     {{block "open-graph" .}}
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@{{.PageContext.MainTwitter}}">
+    <meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_GB">
+    <meta property="og:title" content="{{.PageContext.LongName}}">
+    <meta property="og:description" content="{{.PageContext.SiteDescription}}">
+    <meta property="og:image" content="{{.PageContext.FullURL}}{{url "/images/open_graph-general.jpg"}}">
+    <meta property="og:url" content="{{.PageContext.FullURL}}{{url "/"}}">
     {{end}}
 
-    <link rel="stylesheet" href="{{url "/css/main.scss.css"}}" type="text/css" />
+    <link rel="stylesheet" href="{{url "/css/main.scss.css"}}" type="text/css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500|Roboto:300,400,500" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500|Roboto:300,400,500">
 </head>
 <body>
 
