--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -1,5 +1,22 @@
 {{define "title"}}{{.PageContext.ShortName}} | {{.PageData.Timeslot.Title}} {{.PageData.Timeslot.StartTime.Format "Monday, _2 Jan 2006 - 15:04"}}{{end}}
 
+{{define "open-graph"}}
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@{{.PageContext.MainTwitter}}">
+<meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}">
+<meta property="og:locale" content="en_GB">
+<meta property="og:title" content="{{.PageContext.ShortName}} | {{.PageData.Timeslot.Title}}">
+{{if .PageData.Timeslot.Season.ShowMeta.Photo}}
+<meta property="og:image" content="{{.PageContext.FullURL}}{{url .PageData.Timeslot.Season.ShowMeta.Photo}}">
+{{else}}
+<meta property="og:image" content="{{.PageContext.FullURL}}{{url "images/open_graph-general.jpg"}}">
+{{end}}
+<meta property="og:type" content="website">
+<meta property="og:url" content="{{.PageContext.FullURL}}{{url "/shows/timeslots/"}}{{.PageData.Timeslot.TimeslotID}}">
+<!-- @TODO: Remove HTML, so it leaves plain text.-->
+<meta property="og:description" content="{{.PageData.Timeslot.Description}}">
+{{end}}
+
 {{define "content"}}
 	{{with .PageData}}
 
