--- a/views/elements/banner.tmpl
+++ b/views/elements/banner.tmpl
@@ -1,22 +1,26 @@
 {{define "banner"}}
-  <div class="row banner">
-    <div id="banner-carousel" class="carousel slide" data-ride="carousel">
-      {{if gt (len .Banners) 1}}
-      <ol class="carousel-indicators">
-        {{range $index, $Banners := .Banners}}
-        <li data-target="#banner-carousel" data-slide-to="{{$index}}" class="{{ if eq $index 0 }} active {{end}}"></li>
+<div class="row banner justify-content-center">
+  <div class="col-10">
+    <div class="row">
+      <div id="banner-carousel" class="carousel slide" data-ride="carousel">
+        {{if gt (len .Banners) 1}}
+        <ol class="carousel-indicators">
+          {{range $index, $Banners := .Banners}}
+          <li data-target="#banner-carousel" data-slide-to="{{$index}}" class="{{ if eq $index 0 }} active {{end}}"></li>
+          {{end}}
+        </ol>
         {{end}}
-      </ol>
-      {{end}}
-      <div class="carousel-inner" role="listbox">
-        {{range $index, $Banners := .Banners}}
-        <div class="carousel-item {{ if eq $index 0 }} active {{end}}">
-          <a class="w-100" href="{{$Banners.Target}}">
-            <img class="d-block img-fluid" src="https://ury.org.uk{{$Banners.URL}}" alt="{{$Banners.Alt}}">
-          </a>
+        <div class="carousel-inner" role="listbox">
+          {{range $index, $Banners := .Banners}}
+          <div class="carousel-item {{ if eq $index 0 }} active {{end}}">
+            <a class="w-100" href="{{$Banners.Target}}">
+              <img class="d-block img-fluid" src="https://ury.org.uk{{$Banners.URL}}" alt="{{$Banners.Alt}}">
+            </a>
+          </div>
+          {{end}}
         </div>
-        {{end}}
       </div>
     </div>
   </div>
+</div>
 {{end}}
