--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -27,8 +27,10 @@
               <p>Contact our teams to find out more.</p>
             </div>
             <div class="col-lg-6">
-              <ul>
-                <li>List of teams here.</li>
+              <ul class="split-evenly-2 no-bullets">
+              {{range .Teams}}
+                <li>{{.Name}}</li>
+              {{end}}
               </ul>
             </div>    
           </div>
