--- a/views/competitions.tmpl
+++ b/views/competitions.tmpl
@@ -1,3 +1,4 @@
+{{define "title"}}{{.PageContext.ShortName}} | Competitions{{end}}
 {{define "content"}}
 <div class="container-fluid banner-2">
   <div class="container">
