Changed to use Descriptive Lists.

--- a/views/competitions.tmpl
+++ b/views/competitions.tmpl
@@ -28,20 +28,39 @@
   </div>
 </div>
 
-<!-- Competition Specific Rules. Remove section when no active competitions. Should Contain (Title, Competition Period, Prizes, How to enter) -->
 <div class="container-fluid container-padded">
   <div class="container">
     <h2 class="text-center">Competition Specific Rules</h2>
     <p>All general rules apply to these competitions, unless changes are explicitly stated!</p>
+    <!-- Example Competition -->
+    <!--
+    <h3>Competition Name</h3>
+    <dl>
+      <dt>Competition period:</dt>
+      <dd>hh:mm dd/mm/yyyy - hh:mm dd/mm/yyyy</dd>
+      <dt>Prizes:</dt>
+      <dd><ul>
+        <li>Prize Details [Number Available]</li>
+        <li>Prize Details [Number Available]</li>
+      </ul></dd>
+      <dt>How to enter:</dt>
+      <dd>Information on how to enter the competition.</dd>
+    <dl>
+    -->
+
     <h3>Summer Ball Competition</h3>
-    <ul>
-      <li><strong>Competition Period:</strong> 3PM 02/06/2017 - 12PM 10/06/2017</li>
-      <li><strong>Prizes:</strong></li>
+    <dl>
+      <dt>Competition period:</dt>
+      <dd>3PM 02/06/2017 - 12PM 10/06/2017</dd>
+      <dt>Prizes:</dt>
+      <dd>
         <ul>
           <li>1 Summer Ball Ticket [2 available]</li>
         </ul>
-      <li><strong>How to enter:</strong> Answer the question pinned on our facebook page (URY1350). Correct entries will be assigned a random number. Winners will be drawn after the competition closes on 10/06/2017.</li>
-    </ul>
+      </dd>
+      <dt>How to enter:</dt>
+      <dd>Answer the question pinned on our facebook page (URY1350). Correct entries will be assigned a random number. Winners will be drawn after the competition closes on 10/06/2017.</dd>
+    </dl>
   </div>
 </div>
 {{end}}
