Added link for more info about slack

--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -71,7 +71,7 @@
       <ul>
         <li><strong>Pay Membership - </strong>The easiest way to pay membership is through the <a href="//yusu.org/groups/university-radio-york/" target="_blank">yusu.org</a> website.</li>
         <li><strong>Sign Up To MyRadio - </strong>MyRadio is our computer system for managing shows, members, and our mailing list. You can join MyRadio by completing the form below, it’s instant and of course there’s no commitment to do anything.</li>
-        <li><strong>Join Our Slack Team - </strong>Use slack; it's like Facebook Messenger but for URY team communication. Slack has the advantage of having a “channel” for each team, so you can join any channel and see what is happening. Our Slack team: <a href="//ury.slack.com" title="Join Our Slack Team" target="_blank">ury.slack.com</a> sign up using your university email address.</li>
+        <li><strong>Join Our Slack Team - </strong>Use <a href="//slack.com/is" title="Find out more about Slack!" target="_blank">Slack</a>; it's like Facebook Messenger but for URY team communication. Slack has the advantage of having a “channel” for each team, so you can join any channel and see what is happening. Our Slack team: <a href="//ury.slack.com" title="Join Our Slack Team" target="_blank">ury.slack.com</a> sign up using your university email address.</li>
       </ul>
       <p>You can also come and <a href="{{url "/contact/"}}" title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
   </div>
