Tidy scss and disable linter

--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -1,43 +1,46 @@
-// Splits a list into two even columns for anything above md and three for anything above xl
-// otherwise its one column
-ul.split-evenly-3 {
-  text-align: left;
-  overflow: auto;
-  width: 100%;
 
-  @include media-breakpoint-up(md) {
-    li {
-      float: left;
-      width: 50%;
-      padding-right: 1em;
+// scss-lint:disable This is specific to UL's only
+ul {
+  // Splits a list into two even columns for anything above md and three for anything above xl
+  // otherwise its one column
+  &.split-evenly-3 {
+    text-align: left;
+    overflow: auto;
+    width: 100%;
+
+    @include media-breakpoint-up(md) {
+      li {
+        float: left;
+        width: 50%;
+        padding-right: 1em;
+      }
     }
-  }
 
-
-  @include media-breakpoint-up(xl) {
-    li {
-      float: left;
-      width: 33%;
+    @include media-breakpoint-up(xl) {
+      li {
+        float: left;
+        width: 33%;
+      }
     }
-  }
 }
 
-// Splits a list into two even columns for anything above md
-// otherwise its one column
-ul.split-evenly-2 {
-  text-align: left;
-  overflow: auto;
-  width: 100%;
+  // Splits a list into two even columns for anything above md
+  // otherwise its one 
+  &.split-evenly-2 {
+    text-align: left;
+    overflow: auto;
+    width: 100%;
 
-  @include media-breakpoint-up(md) {
-    li {
-      float: left;
-      width: 50%;
-      padding-right: 1em;
+    @include media-breakpoint-up(md) {
+      li {
+        float: left;
+        width: 50%;
+        padding-right: 1em;
+      }
     }
   }
-}
 
-ul.no-bullets {
-  list-style: none;
+  &.no-bullets {
+    list-style: none;
+  }
 }
