--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -34,6 +34,7 @@
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500|Roboto:300,400,500">
+    <script src="https://use.fontawesome.com/577e6fdb00.js"></script>
 </head>
 <body>
 
