further improve current and next
I know I keep changing this, but I want to get the sizing of it right
and I think I am mostly there now

--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -4,7 +4,7 @@
 	<div class="col-11 col-md-10">
 		<div class="row">
 			{{if .Current}}
-			<div class="col-4 col-lg-3 col-xl-2 p-0 current-and-next-img">
+			<div class="col-4 col-lg-2 p-0 current-and-next-img">
 				<img src="/images/show-current.png" alt="" />
 				<a href="https://ury.org.uk/listen" class="btn btn-red listen-btn mobile-hide" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a>
 			</div>
@@ -14,7 +14,7 @@
 			</div>
 			{{end}}
 			{{if .Next}}
-			<div class="col col-lg-4 col-xl-5 p-3 p-lg-4 current-and-next-next">
+			<div class="col col-lg-5 p-3 p-lg-4 current-and-next-next">
 				<h2>Next</h2>
 				{{template "current_next" .Next}}
 			</div>
