--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -5,7 +5,7 @@ $button-color: #fff;
   padding: .25em 1em;
   font-family: $font-family-heading;
   font-weight: 500;
-  font-size: $base-font-size;
+  font-size: 1rem;
   box-shadow: 0px 2px 5px -1px rgba(0, 0, 0, 0.75);
 
   &.btn-primary {
