--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -1,7 +1,7 @@
 {{define "navbar"}}
 <nav class="navbar navbar-ury navbar-toggleable-md fixed-top">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsed" aria-controls="collapsed" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <i class="fa fa-bars" aria-hidden="true"></i>
   </button>
   <a class="navbar-brand" href="{{url "/"}}">
     <img src="{{url "/images/logo.png"}}" height="34" alt="{{.PageContext.LongName}} Logo" >
@@ -15,10 +15,11 @@
       <a class="nav-item nav-link" href="{{url "/getinvolved/"}}">Get Involved</a>
       <a class="nav-item nav-link" href="{{url "/contact/"}}">Contact Us</a>
     </div>
-    <form action="{{url "/search/"}}" class="form-inline ml-auto search-box">
+    <form action="{{url "/search/"}}" class="form-inline ml-auto search-box search-box-expand">
         <button type="submit" class="" alt="Submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-        <input type="text" name="term" placeholder="Search...">
-       
+        <div class="col px-0">
+          <input type="text" name="term" placeholder="Search...">
+        </div>
     </form>
   </div>
 </nav>
