move to container-padded rather than a more general rule
not all containers need padding

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -14,7 +14,7 @@
 
 {{define "content"}}
 <div class="container-fluid banner-2">
-  <div class="container">
+  <div class="container container-padded">
     <div class="row align-items-center text-center">
       <div class="col">
         <h1 class="display-3">On Air, Online, On Demand</h1>
@@ -24,7 +24,7 @@
   </div>
 </div>
 <div class="container-fluid container-padded bg-off-white">
-	<div class="container">
+	<div class="container container-padded">
     <h1 class="text-center">Welcome to URY!</h1>
     <div class="row">
       <div class="col-md-6 col-lg-3">
