--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -14,7 +14,7 @@
 
 {{define "content"}}
 <div class="container-fluid banner-2 text-overlay">
-  <div class="container">
+  <div class="container container-padded">
     <div class="row align-items-center text-center">
       <div class="col">
         <h1 class="display-2">Say hi to URY!</h1>
@@ -55,7 +55,7 @@
   </div>
 </div>
 <div class="container-fluid container-padded text-center bg-secondary key-contacts">
-  <div class="container">
+  <div class="container container-padded">
     <div class="row">
       <div class="col">
         <h1>Key Contacts</h1>
@@ -107,7 +107,7 @@
   </div>
 </div>
 <div class="container-fluid container-padded text-center bg-off-white">
-  <div class="container">
+  <div class="container container-padded">
     <div class="row">
       <div class="col">
         <h1>Everything Else</h1>
