--- a/views/season.tmpl
+++ b/views/season.tmpl
@@ -13,7 +13,7 @@
 {{define "content"}}
 {{with .PageData}}
 
-<div class="container">
+<div class="container container-padded">
 
 	<h1>
 		{{.Season.Title}}
