--- a/views/404.tmpl
+++ b/views/404.tmpl
@@ -1,6 +1,6 @@
 {{define "content"}}
-<div class="container outer page404">
-	<div class="container">
+<div class="container container-padded outer page404">
+	<div class="container container-padded">
 		<div>
 			<h1>4 <div class="spinner"></div> 4</h1>
 			<h2>Looks like we couldn't find that page. Oops!</h2>
