--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -13,7 +13,7 @@
 
 {{define "content"}}
 <div class="container-fluid banner-2 text-overlay">
-  <div class="container">
+  <div class="container container-padded">
     <div class="row justify-content-center">
       <div class="text-center">
         <h1 class="display-1">Radio</h1>
@@ -25,7 +25,7 @@
   </div>
 </div>
 <div class="container-fluid container-padded text-center bg-off-white">
-  <div class="container">
+  <div class="container container-padded">
     <div class="row">
       <div class="col">
         <h3>Want to help York make incredible <strong>Award Winning</strong> radio?</h3>
@@ -38,7 +38,7 @@
   </div>
 </div>
 <div class="container-fluid container-padded ">
-  <div class="container">
+  <div class="container container-padded">
     <div class="row">
       <h2>What Can I Do?</h2>
       <p>Of course, everyone wants to be on the radio! Presenting is as easy as baking a cake (disclaimer: I can't bake cakes)
@@ -52,7 +52,7 @@
   </div>
 </div>
 <div class="container-fluid container-padded  bg-primary">
-  <div class="container">
+  <div class="container container-padded">
     <div class="row">
       <h2>How Do I Get A Show?</h2>
       <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through <a href="http://yusu.org" title="York University Students Union" target="_blank">YUSU</a>.</p>
@@ -65,7 +65,7 @@
   </div>
 </div>
 <div class="container-fluid container-padded  bg-third">
-  <div class="container">
+  <div class="container container-padded">
       <h2>How Do I Join?</h2>
       <p>If you’re ready to join URY right now, we have some very easy steps to get you started...</p>
       <dl>
@@ -80,7 +80,7 @@
   </div>
 </div>
 <div class="container-fluid container-padded bg-secondary" id="signUp">
-  <div class="container">
+  <div class="container container-padded">
     <h1>Sign up today!</h1>
     <hr>
     <form name="getInvolvedForm" class="form-getinvolved">
