--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -42,7 +42,7 @@
 
 
 {{block "content" .}}
-<div class="container">
+<div class="container container-padded">
 <h1>Error</h1>
 <p>No content defined for this page.</p>
 </div>
