--- a/views/search.tmpl
+++ b/views/search.tmpl
@@ -2,7 +2,7 @@
 {{define "content"}}
 {{with .PageData}}
 
-<div class="container pt-5">
+<div class="container container-padded pt-5">
     <form action="{{url "/search/"}}" class="form-inline ml-auto search-box" style="font-size:2rem;">
         <button type="submit" class="" alt="Submit"><i class="fa fa-search" aria-hidden="true"></i></button>
         <div class="col px-0">
@@ -10,7 +10,7 @@
         </div>
     </form>
 	{{if .Searching}}
-            {{.NumResults}} Results
+        <div class="pt-3" style="text-align: right;">{{.NumResults}} Results</div>
         <hr>
 		{{range .Results}}
             <h4>
@@ -27,7 +27,7 @@
 	{{else}}
 	{{end}}
 
-</div><!-- /.container -->
+</div><!-- /.container container-padded -->
 
 {{end}}
 {{end}}
