--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -20,7 +20,7 @@
 	{{with .PageData}}
 
 	  <div class="container-fluid header-large current-next">
-		  <div class="container ">
+		  <div class="container container-padded ">
       {{if .MixcloudAvailable}}
         <div class="row justify-content-center">
           <div class="col-md-10 py-2 mixcloud">
@@ -33,7 +33,7 @@
 		  </div>
 	  </div>
     <div class="container-fluid bg-off-white">
-      <div class="container">
+      <div class="container container-padded">
         <div class="row">
           <div class="col-12 col-lg-3">
             <img class="img-fluid show-img" src="
@@ -75,20 +75,20 @@
           </div>
         </div>
       </div>
-    </div> <!-- /outer containter -->
+    </div>
     
       {{if .Timeslot.Credits}}
-      <div class="container outer page1-credits-people">
+      <div class="container container-padded outer page1-credits-people">
         <h2>Credits</h2>
         {{range .Timeslot.Credits}}
           <a href="/people/{{.User.MemberID}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
         {{end}}
 
-      </div> <!-- /outer containter -->
+      </div>
       {{end}}
       {{if .Tracklist}}
-      <div class="container outer page1-tracklist">
-        <div class="container">
+      <div class="container container-padded outer page1-tracklist">
+        <div class="container container-padded">
           <h2>
             Tracklist
           </h2>
@@ -111,7 +111,7 @@
             </tbody>
           </table>
         </div>
-      </div> <!-- /outer containter -->		
+      </div>	
       {{end}}
 
 	{{end}}
