--- a/sass/elements/_navbar.scss
+++ b/sass/elements/_navbar.scss
@@ -1,10 +1,15 @@
-$nav-background: $primary-color;
+$nav-background: #f4f4f4;
 
 // How fast search expands and shrinks
 $search-transition-time: .5s;
 
 .navbar-ury {
   background: $nav-background;
+  border-bottom: 1px solid rgba(2, 45, 89, 0.3);
+
+  a {
+    color: rgb(2, 45, 89);
+  }
 }
 
 .search-box {
