--- a/sass/elements/_navbar.scss
+++ b/sass/elements/_navbar.scss
@@ -58,17 +58,22 @@ $search-transition-time: .5s;
 
   input {
     // only do the animation when the nav is not collapsed
-    @include media-breakpoint-up(md) {
-      width: 70px;
-      transition-duration: $search-transition-time;
-      transition-delay: 0.1s
+    width: 70px;
+    transition-duration: $search-transition-time;
+    transition-delay: 0.1s;
+    @include media-breakpoint-down(md) {
+      transition: none;
+      width: 100%;
     }
+
 
     &:focus {
       // only do the animation when the nav is not collapsed
-      @include media-breakpoint-up(md) {
-        width: 170px;
-        transition-duration: $search-transition-time;
+      width: 170px;
+      transition-duration: $search-transition-time;
+      @include media-breakpoint-down(md) {
+        transition: none;
+        width: 100%;
       }
     }
   }
