--- a/sass/elements/_navbar.scss
+++ b/sass/elements/_navbar.scss
@@ -11,6 +11,14 @@ $search-transition-time: .5s;
   a {
     color: rgb(2, 45, 89);
   }
+
+  .navbar-toggler {
+    line-height: inherit;
+
+    .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    }
+  }
 }
 
 .search-box {
