--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -2,7 +2,7 @@
 <header class="navbar navbar-ury navbar-toggleable-md fixed-top bd-navbar">
   <nav class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsed" aria-controls="collapsed" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fa fa-bars" aria-hidden="true"></i>
+      <i class="navbar-toggler-icon" aria-hidden="true"></i>
     </button>
     <a class="navbar-brand" href="{{url "/"}}">
       <img src="{{url "/images/logo.png"}}" height="34" alt="{{.PageContext.LongName}} Logo" >
