Add 'this week' schedule endpoint
Link to the endpoint from navbar.

Lightly refactor the controller to make this possible without duplication.

Also, make some variable names cleaner.

--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -9,7 +9,7 @@
     </a>
     <div class="navbar-collapse collapse" id="collapsed">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="#">Schedule</a>
+        <a class="nav-item nav-link" href="{{url "/schedule/thisweek" }}">Schedule</a>
         <a class="nav-item nav-link" href="#">Shows</a>
         <a class="nav-item nav-link" href="#">URY Player</a>
         <a class="nav-item nav-link" href="{{url "/about/"}}">About Us</a>
