--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -4,43 +4,48 @@
 
 <div class="container">
 
-<h1>Schedule for week commencing {{ (index .Dates 0).Format "Jan 02 2006" }}</h1>
+<h1>Schedule for week commencing {{(index .Schedule.Dates 0).Format "Jan 02 2006"}}</h1>
+<a href="{{url .PrevURL}}">Previous week</a>
+<a href="{{url .CurrURL}}">Permalink</a>
+<a href="{{url .NextURL}}">Next week</a>
 
-{{ if .Table }}
+{{with .Schedule}}
+{{if .Table}}
 <table>
 	<thead>
 		<tr>
 			<th>Time</th>
-			{{ range .Dates }}
-			<th>{{ .Weekday }}</th>
-			{{ end }}
+			{{range .Dates}}
+			<th>{{.Weekday}}</th>
+			{{end}}
 		</tr>
 	</thead>
 	<tbody>
-		{{ range .Table }}
+		{{range .Table}}
 			<tr>
-				<td>{{ .Hour | printf "%02d" }}:{{ .Minute | printf "%02d" }}</td>
-				{{ range .Cells }}
-					{{ if ne .RowSpan 0 }}
-					<td rowspan="{{ .RowSpan }}" title="{{ showDesc .Item }}">
-						{{ if .Item.HasPage }}
-							<a href="{{ url .Item.GetPageURL }}">{{ showName .Item }}</a>
-						{{ else }}
-							{{ showName .Item }}
-						{{ end }}
+				<td>{{.Hour | printf "%02d"}}:{{ .Minute | printf "%02d" }}</td>
+				{{range .Cells}}
+					{{if ne .RowSpan 0}}
+					<td rowspan="{{.RowSpan}}" title="{{ showDesc .Item }}">
+						{{if .Item.HasPage}}
+							<a href="{{url .Item.GetPageURL}}">{{ showName .Item }}</a>
+						{{else}}
+							{{showName .Item}}
+						{{end}}
 					</td>
-					{{ end }}
-				{{ end }}
+					{{end}}
+				{{end}}
 			</tr>
-		{{ end }}
+		{{end}}
 	</tbody>
 </table>
-{{ else }}
+{{else}}
 	<p>Nothing today</p>
-{{ end }}
+{{end}}
 
 </div><!-- /.container -->
 
-{{ end }}
-{{ end }}
+{{end}}
+{{end}}
+{{end}}
 
