--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -11,7 +11,7 @@
 <div class="container-fluid bg-off-white">
 	<div class="container">
 		<div class="row">
-			<h1>Schedule <small class="muted">from {{(index .Schedule.Dates 0).Format "02 Jan 2006"}} to {{(index .Schedule.Dates 6).Format "02 Jan 2006"}}</small></h1>
+			<h1>Schedule <small class="muted">for {{week (index .Schedule.Dates 0)}}</small></h1>
 		</div>
 		<nav aria-label="Related Schedules" class="row nav justify-content-between">
 				<a class="nav-link" href="{{url .PrevURL}}">Previous week</a>
