Add placeholder styling for schedule blocks
This currently only picks out sustainer and non-sustainer, and
does so in a rather ugly way, but you get the gist.

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -14,3 +14,7 @@ $mobile-max-width: 770px;
 //Current and Next
 $current-next-now-bg: #003367;
 $current-next-next-bg: rgba(0, 51, 103, 0.85);
+
+//Schedule block colours
+$blocks-sustainer-color: $secondary-color;
+$blocks-regular-color: $off-white-color;
