--- a/sass/main.scss
+++ b/sass/main.scss
@@ -256,3 +256,20 @@ footer {
 .podcast.card {
   color: #555;
 }
+
+/* Schedule blocks */
+@mixin schedule-blocks($color) {
+  background-color: $color;
+
+  // TODO(MattWindsor91): this is probably wrong.
+  @if (lightness($color) < 50) {
+    color: $off-white-color;
+  }
+}
+
+.schedule-blocks-sustainer {
+  @include schedule-blocks($blocks-sustainer-color);
+}
+.schedule-blocks-regular {
+  @include schedule-blocks($blocks-regular-color);
+}
