Don't emit previous/next URLs if out of range
Fixes schedule crashes on week 1 of year 1000, and week 52 of
year 9999.

--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -14,9 +14,15 @@
 			<h1>Schedule <small class="muted">for {{week (index .Schedule.Dates 0)}}</small></h1>
 		</div>
 		<nav aria-label="Related Schedules" class="row nav justify-content-between">
-				<a class="nav-link" href="{{url .PrevURL}}">Previous week</a>
-				<a class="nav-link" href="{{url .CurrURL}}">Permalink</a>
-				<a class="nav-link" href="{{url .NextURL}}">Next week</a>
+			{{if .PrevURL}}
+				<a class="nav-link" href="{{url .PrevURL.Path}}">Previous week</a>
+			{{end}}
+			{{if .CurrURL}}
+				<a class="nav-link" href="{{url .CurrURL.Path}}">Permalink</a>
+			{{end}}
+			{{if .NextURL}}
+				<a class="nav-link" href="{{url .NextURL.Path}}">Next week</a>
+			{{end}}
 		</nav>
 	</div>
 </div>
