stop codacy being so anal

--- a/sass/base/_searchBox.scss
+++ b/sass/base/_searchBox.scss
@@ -20,7 +20,7 @@ $search-button-color-hover: #000;
     margin-bottom: auto;
     margin-top: auto;
     padding-left: 0;
-    padding-right: 0.5em;
+    padding-right: .5em;
     width: 100%;
 
     &:focus {
