add a margin to the search page

--- a/views/search.tmpl
+++ b/views/search.tmpl
@@ -2,7 +2,7 @@
 {{define "content"}}
 {{with .PageData}}
 
-<div class="container container-padded pt-5">
+<div class="container container-padded pt-5 mt-5">
     <form action="{{url "/search/"}}" class="form-inline ml-auto search-box" style="font-size:2rem;">
         <button type="submit" class="" alt="Submit"><i class="fa fa-search" aria-hidden="true"></i></button>
         <div class="col px-0">
