--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -22,9 +22,13 @@
 {{define "content"}}
 
   {{with .PageData}}
-    <div class="container-fluid header-large current-next">
-      <div class="container container-padded mobile-hide">
-      {{template "current_and_next" .}}
+    <div class="container-fluid current-next">
+      <div class="container mobile-hide">
+        <div class="row justify-content-center">
+          <div class="col-11 col-md-10">
+          {{template "current_and_next" .}}
+          </div>
+        </div>
       </div><!-- /.container container-padded -->
     </div><!-- /outer containter -->
     <div class="container-fluid bg-off-white">
