--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -3,7 +3,7 @@
   <div class="container-fluid current-next">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-11 col-md-10">
+        <div class="col-11 col-md-10 box-shadow-2">
         {{template "current_and_next" .}}
         {{template "banner" .}}
         </div>
