Update to bootstrap 4 beta

--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -1,8 +1,8 @@
 {{define "navbar"}}
-<header class="navbar navbar-ury navbar-toggleable-md fixed-top bd-navbar">
+<header class="navbar navbar-ury navbar-expand-md fixed-top bd-navbar">
   <nav class="container">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsed" aria-controls="collapsed" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="navbar-toggler-icon" aria-hidden="true"></i>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsed" aria-controls="collapsed" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="{{url "/"}}">
       <img src="{{url "/images/logo.png"}}" height="34" alt="{{.PageContext.LongName}} Logo" >
