--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,6 +7,8 @@ $font-family-heading: "Raleway", sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
+  font-family: $font-family-heading;
+  font-weight: 500;
   * {
     font-family: $font-family-heading;
     font-weight: 500;
