--- a/sass/base/_backgrounds.scss
+++ b/sass/base/_backgrounds.scss
@@ -11,11 +11,11 @@
 }
 
 .bg-primary {
-  background: $primary-color;
+  background: $primary-color !important;
 }
 
 .bg-secondary {
-  background: $secondary-color;
+  background: $secondary-color !important;
 
   hr {
     border-color: $off-white-color;
@@ -23,9 +23,9 @@
 }
 
 .bg-third {
-  background: $third-color;
+  background: $third-color !important;
 }
 
 .bg-transparent {
-  background: none;
+  background: none !important;
 }
