--- a/sass/main.scss
+++ b/sass/main.scss
@@ -257,7 +257,7 @@ footer {
   color: #555;
 }
 
-/* Schedule blocks */
+// Schedule blocks
 @mixin schedule-blocks($color) {
   background-color: $color;
 
