Added =a controller for the get involved page and a teams model

--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -41,6 +41,7 @@
   <div class="container container-padded">
     <div class="row">
       <h2>What Can I Do?</h2>
+      <h1>{{.Teams}}</h1>
       <p>Of course, everyone wants to be on the radio! Presenting is as easy as baking a cake (disclaimer: I can't bake cakes)
         and you don't have to sign up at Freshers' Fair or at the start of a term to get your very own show!
         Take a look at our <a href="/schedule" title="The URY Schedule">schedule</a>. If you can see a gap, there's no reason you couldn't fill it.
