--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -46,7 +46,7 @@
         and you don't have to sign up at Freshers' Fair or at the start of a term to get your very own show!
         Take a look at our <a href="/schedule" title="The URY Schedule">schedule</a>. If you can see a gap, there's no reason you couldn't fill it.
       </p>
-      <p>As well as just presenting, there are <strong><a href="#" title="Have a look at what our teams do!">!!NUMBER! Teams!</a></strong>
+      <p>As well as just presenting, there are <strong><a href="#" title="Have a look at what our teams do!">{{.NumTeams}} Teams</a></strong>
         of students that make content and keep URY running. You can see more about them at the bottom of this page.
       </p>
     </div>
@@ -56,12 +56,14 @@
   <div class="container container-padded">
     <div class="row">
       <h2>How Do I Get A Show?</h2>
-      <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through <a href="http://yusu.org" title="York University Students Union" target="_blank">YUSU</a>.</p>
-      <p>Once you have paid, log in to <a href="/myradio/">MyRadio</a> and set up an account, from there you will be able to sign up to training! Under "Get On Air",
-        click "Get Studio Trained" and take your pick of training sessions you can attend, click join and you are good to go!
-        If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.
-        During training, we will show you how to use the studio and how to apply for a show. Shows are typically one hour long, scheduled once a week.</p>
-      <p><strong>Easy peasy.</strong></p>
+      <div> <!-- Prevents bug where p would appear inline with h2 -->
+        <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through <a href="http://yusu.org" title="York University Students Union" target="_blank">YUSU</a>.</p>
+        <p>Once you have paid, log in to <a href="/myradio/">MyRadio</a> and set up an account, from there you will be able to sign up to training! Under "Get On Air",
+          click "Get Studio Trained" and take your pick of training sessions you can attend, click join and you are good to go!
+          If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.
+          During training, we will show you how to use the studio and how to apply for a show. Shows are typically one hour long, scheduled once a week.</p>
+        <p><strong>Easy peasy.</strong></p>
+    </div>
     </div>
   </div>
 </div>
