--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -135,6 +135,7 @@
       </div>
       <div class="col-md-7">
         <h2>Where to find us</h2>
+        <a name="map"></a>
         <div id="map_container">
           <div id="map"></div>
         </div>
